# local-n8n

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  plan.md  progress.md  project_info.md  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  release.yml
dev/: 404.html  index.html  sitemap.xml
dev/commands/: index.html
dev/development/: index.html
dev/manual-testing/: index.html
dev/quickstart/: index.html
dev/release/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
docs/: commands.md  development.md  index.md  manual-testing.md  quickstart.md  release.md  troubleshooting.md  windows.md
scripts/: bootstrap-windows.ps1  check-windows-prereqs.ps1  install-windows-launcher.ps1  lon.ps1
src/local_n8n/: __init__.py  app.py  windows_bridge.py
src/local_n8n/bootstrap/: docker.py
src/local_n8n/compose/: __init__.py  template.py
src/local_n8n/core/: __init__.py  backup.py  config.py  crypto.py  dev.py  diagnostics.py  doctor.py  errors.py  init.py  instance.py  readiness.py  runner.py  state.py
tests/: test_backup.py  test_bootstrap.py  test_cli.py  test_compose_template.py  test_crypto.py  test_dev.py  test_docs.py  test_doctor.py  test_init.py  test_instance.py  test_readiness.py  test_runner.py  test_state.py  test_windows_bootstrap.py  test_windows_bridge.py  test_windows_support.py
v0.1.0a1/: 404.html  index.html  sitemap.xml
v0.1.0a1/commands/: index.html
v0.1.0a1/development/: index.html
v0.1.0a1/manual-testing/: index.html
v0.1.0a1/quickstart/: index.html
v0.1.0a1/release/: index.html
v0.1.0a1/search/: search_index.json
v0.1.0a1/troubleshooting/: index.html
v0.1.0a2/: 404.html  index.html  sitemap.xml
v0.1.0a2/commands/: index.html
v0.1.0a2/development/: index.html
v0.1.0a2/manual-testing/: index.html
v0.1.0a2/quickstart/: index.html
v0.1.0a2/release/: index.html
v0.1.0a2/troubleshooting/: index.html
v0.1.0a3/: 404.html  index.html  sitemap.xml
v0.1.0a3/commands/: index.html
v0.1.0a3/development/: index.html
v0.1.0a3/manual-testing/: index.html
v0.1.0a3/quickstart/: index.html
v0.1.0a3/release/: index.html
v0.1.0a3/troubleshooting/: index.html
