[project]
name = "local-n8n"
version = "0.1.0"
description = "Cross-platform CLI for a local, portable, self-hosted n8n (lon)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
lon = "local_n8n.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "ty>=0.0.1a21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_n8n"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
