[project]
name = "local-n8n"
version = "0.1.0a3"
description = "Cross-platform CLI for a local, portable, self-hosted n8n (lon)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
keywords = ["n8n", "cli", "docker", "backup", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]
dependencies = [
    "argon2-cffi>=23.1",
    "cryptography>=43",
    "typer>=0.12",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/harihkim/local-n8n"
Documentation = "https://harihkim.github.io/local-n8n/latest/"
Repository = "https://github.com/harihkim/local-n8n"
Issues = "https://github.com/harihkim/local-n8n/issues"
Releases = "https://github.com/harihkim/local-n8n/releases"

[project.scripts]
lon = "local_n8n.app:main"

[dependency-groups]
dev = [
    "mike>=2.1",
    "mkdocs-material>=9.5",
    "pyrefly>=1.1.1",
    "pytest>=8",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "ty>=0.0.1a21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_n8n"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python-platform = "linux"
python-version = "3.13"
root = ["./src", "./tests"]

[tool.ty.rules]
all = "error"

[tool.ty.src]
include = ["src", "tests"]
respect-ignore-files = true

[tool.ty.terminal]
error-on-warning = true
output-format = "full"

[tool.pyrefly]
preset = "strict"
min-severity = "warn"
project-includes = [
    "src/**/*.py",
    "tests/**/*.py",
]
search-path = ["src"]
python-platform = "linux"
python-version = "3.13"
output-format = "full-text"
